# atmoq

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  justfile  release-plz.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  docker.yml  e2e.yml  pages.yml  release-plz.yml
crates/atmoq/: CHANGELOG.md  Cargo.toml
crates/atmoq/src/: car.rs  dialect07.rs  frame.rs  json.rs  lib.rs  main.rs  router.rs  store.rs  web.rs
crates/lastproto-relay/: Cargo.toml
crates/lastproto-relay/src/: frame.rs  json.rs  lib.rs
docs/: atom-spec-notes.md  going-live.md
docs/decisions/: 0001-transport-stack.md
docs/design/: discovery.md  moq-net-max-group-age.patch  moq-net-replay.patch  replay.md  selective-sync.md
docs/diag/: 2026-06-10-public-relays.md  2026-07-19-relay-invalid-data.md
docs/specs/: draft-holmgren-at-repository-02.txt  draft-holmgren-at-synchronization-00.txt  draft-nandakumar-atproto-atom-00.txt  draft-newbold-at-architecture-00.txt
go/: client.go  client_test.go  drisl.go  drisl_test.go  go.mod  go.sum  varint.go  varint_test.go
go/cmd/atmoq-firehose/: main.go
rust/: .dockerignore  Cargo.toml  Dockerfile  release-plz.toml
rust/crates/atmoq/: CHANGELOG.md  Cargo.toml
rust/crates/atmoq/examples/: relay_conformance.rs
rust/crates/atmoq/src/: car.rs  drisl.rs  frame.rs  ingest.rs  lib.rs  main.rs  router.rs  store.rs  web.rs
tests/e2e/: .dockerignore  Dockerfile  README.md  entrypoint.sh  moq-relay.toml  package.json  test.sh  tsconfig.json
tests/e2e/dev-env/: README.md
tests/e2e/dev-env/lib/: constants.ts  index.ts  network.ts  pds.ts  plc.ts  utils.ts
tests/e2e/harness/: capture.mjs  diff-frames.mjs  driver.mjs  frames.mjs  normalize.mjs  start-network.mjs  verify.mjs
tests/relay-conformance/: README.md  aggregate.mjs  cases.mjs  cbor.mjs  corpus-commit.json  corpus-sync.json  corpus.json  emit.mjs  relay-conformance.html  report.mjs
tests/relay-conformance/commit-gen/: build-commits.mjs  build-sync.mjs  package-lock.json  package.json  selfcheck-sync.mjs  selfcheck.mjs
ts/: README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
ts/cmd/: atmoq-firehose.mjs
ts/src/: car.ts  constants.ts  drisl.ts  frame.ts  index.ts  transport.ts  varint.ts
ts/src/types/: webtransport-polyfill.d.ts
ts/test/: drisl.test.ts  frame.test.ts  transport.test.ts  varint.test.ts
