[workspace]
resolver = "2"
members = ["crates/atmoq"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/streamplace/atmoq"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
# Cloudflare's production relay speaks draft-07 only (see docs/diag). These
# crates.io releases (published from englishm/moq-rs, the lineage Cloudflare's
# fork maintains) are byte-identical to the cloudflare/moq-rs
# draft-ietf-moq-transport-07 branch @ ebc843de that we verified live.
# Exact-pinned: the draft-07 line is frozen. Drop when CF deploys draft-14.
moq-transport-07 = { package = "moq-transport", version = "=0.10.0" }
moq-native-07 = { package = "moq-native-ietf", version = "=0.5.4" }
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
