[workspace]
resolver = "2"
members = ["crates/atmoq"]
# Vendored moq-net (see [patch.crates-io] below) is its own crate, not a member.
exclude = ["vendor/moq-net"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/streamplace/atmoq"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
# Cloudflare's production relay speaks draft-07 only (see docs/diag). These
# crates.io releases (published from englishm/moq-rs, the lineage Cloudflare's
# fork maintains) are byte-identical to the cloudflare/moq-rs
# draft-ietf-moq-transport-07 branch @ ebc843de that we verified live.
# Exact-pinned: the draft-07 line is frozen. Drop when CF deploys draft-14.
moq-transport-07 = { package = "moq-transport", version = "=0.10.0" }
moq-native-07 = { package = "moq-native-ietf", version = "=0.5.4" }
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

# TEMPORARY: atmoq needs two additive moq-net changes that aren't in a published
# moq-net yet, both meant to go upstream (see docs/design/moq-net-replay.patch
# and vendor/moq-net/UPSTREAM.md):
#   1. TrackProducer::set_max_group_age — a replay window deeper than moq-net's
#      hardcoded 5s MAX_GROUP_AGE (RAM-bound; see --replay-window-secs).
#   2. TrackProducer::set_group_source — serve groups older than the RAM cache
#      from a pluggable (disk-backed) source on resume (see --backfill-window-secs).
# Vendored in-tree at vendor/moq-net (moq-net 0.1.10 from crates.io + the two
# commits) so release builds are self-contained — no external git fetch. This is
# why the crate isn't published to crates.io (path deps are rejected; see
# release-plz.toml). Drop this and pin a released moq-net once both land upstream.
[patch.crates-io]
moq-net = { path = "vendor/moq-net" }
