[workspace]
resolver = "2"
members = ["crates/atmoq"]
# The vendored fork crates are their own workspaces, not members, so
# `cargo clippy --workspace` etc. don't lint upstream code. atmoq reaches them
# via path+version deps (see crates/atmoq/Cargo.toml).
exclude = ["vendor/moq-net", "vendor/moq-native"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/streamplace/atmoq"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
# Cloudflare's production relay speaks draft-07 only (see docs/diag). These
# crates.io releases (published from englishm/moq-rs, the lineage Cloudflare's
# fork maintains) are byte-identical to the cloudflare/moq-rs
# draft-ietf-moq-transport-07 branch @ ebc843de that we verified live.
# Exact-pinned: the draft-07 line is frozen. Drop when CF deploys draft-14.
moq-transport-07 = { package = "moq-transport", version = "=0.10.0" }
moq-native-07 = { package = "moq-native-ietf", version = "=0.5.4" }
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

# TEMPORARY: atmoq needs two additive moq-net changes that aren't in a published
# moq-net yet, both meant to go upstream (see docs/design/moq-net-replay.patch
# and vendor/moq-net/UPSTREAM.md):
#   1. TrackProducer::set_max_group_age — a replay window deeper than moq-net's
#      hardcoded 5s MAX_GROUP_AGE (RAM-bound; see --replay-window-secs).
#   2. TrackProducer::set_group_source — serve groups older than the RAM cache
#      from a pluggable (disk-backed) source on resume (see --backfill-window-secs).
# The patched moq-net lives in-tree at vendor/moq-net and is published to
# crates.io as `atmoq-moq-net` so `cargo install atmoq` works; vendor/moq-native
# republishes an UNMODIFIED moq-native 0.17.0 as `atmoq-moq-native` solely so
# its moq-net dep resolves to the fork (moq-net types cross the moq-native API
# boundary, so both sides must use the same crate). atmoq consumes both via
# dependency renaming with path+version deps in crates/atmoq/Cargo.toml — path
# wins locally, version is what ships in the published manifest. Drop all of
# this and pin released moq-net/moq-native once both changes land upstream.
