[package]
name = "lastproto-relay"
description = "atproto relay over MoQ transport (prototype)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
ciborium.workspace = true
clap.workspace = true
futures-util.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
