[package]
name = "lastproto-relay"
description = "atproto relay over MoQ transport (prototype)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bytes = "1"
ciborium.workspace = true
clap.workspace = true
data-encoding = "2"
futures-util.workspace = true
moq-native = "0.17"
moq-net = "0.1"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
