[package]
name = "atmoq"
description = "atproto firehose over MoQ transport: bridge, server, and consumer CLI"
readme = "../../../README.md"
keywords = ["atproto", "moq", "quic", "firehose", "bluesky"]
categories = ["network-programming", "command-line-utilities"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bytes = "1"
ciborium.workspace = true
clap.workspace = true
data-encoding = "2"
futures-util.workspace = true
moq-native = "0.17"
moq-native-07.workspace = true
moq-net = "0.1"
moq-transport-07.workspace = true
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
rustls-pemfile = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls = "0.26"
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
